# StreamingPractice

./: .gitignore  README.md  fault-tolerance.py  pyproject.toml  requirements.txt
core/: log_injection_code.py
