[tool.poetry]
name = "streamingpractice"
version = "0.1.0"
description = ""
authors = ["skip"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
kafka-python = "^2.0.2"
numpy = "^1.26.1"
pandas = "^2.1.3"
matplotlib = "^3.8.1"
seaborn = "^0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
